# VersionVault

./: .gitignore  CMakeLists.txt  USAGE.md  build.sh  create_executable.sh  gui.html  pom.xml  vv-gui
docs/: BUILD_DOCS_INDEX.md  BUILD_FROM_SCRATCH.md  BUILD_FROM_SCRATCH_GUIDE.md  BUILD_FROM_SCRATCH_PHASE2.md  BUILD_FROM_SCRATCH_PHASE3.md  BUILD_FROM_SCRATCH_PHASE4_5.md  BUILD_FROM_SCRATCH_PHASE6.md  EXAM_CHECKLIST.md  EXAM_REFERENCE.md  HOW_TO_RUN.md  OOP_CONCEPTS.md  PRESENTATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  UML_DIAGRAMS.md  directoryStructure.md  pom.xml
src/core/: DiffEngine.cpp  DiffEngine.h  FileObject.cpp  FileObject.h  ObjectStore.cpp  ObjectStore.h
src/java/com/versionvault/cli/: Main.java  VersionVaultCLI.java
src/java/com/versionvault/core/: Branch.java  BranchManager.java  Commit.java  CommitHistory.java  ObjectStore.java  Repository.java  RepositoryException.java  StagedFile.java  StagingArea.java  StagingStatus.java  User.java
src/java/com/versionvault/gui/: BranchDialog.java  VersionVaultGUI.java
src/java/com/versionvault/lock/: FileLock.java  LockException.java  LockManager.java  LockType.java
src/java/com/versionvault/merge/: MergeStrategy.java
src/java/com/versionvault/model/: Commit.java  FileTracker.java  Repository.java
src/java/com/versionvault/operations/: CommitOperation.java  MergeOperation.java  OperationException.java  OperationResult.java  VaultOperation.java
src/java/com/versionvault/service/: VersionVaultService.java
src/main/java/com/versionvault/model/: Repository.java
